# AlmndBrd-Mandelbrot

./: CMakeLists.txt  Complex Number Handling (z, c).h  README.md  main.cpp  mandelbrot.uml
GenAI Mandelbrot Set Project/: README.md  main.cpp
GenAI Mandelbrot Set Project/Code Structure (C++)/Base Class/Methods/: Check Divergence.cpp  Iterate Equation.cpp
GenAI Mandelbrot Set Project/Code Structure (C++)/Base Class/Properties/: Complex Number Handling (z, c).h  Iteration Parameters.h
GenAI Mandelbrot Set Project/Code Structure (C++)/Inherited Classes/GenAI Class/: Integration with Fractal Computation.cpp  ML Prediction Module.cpp  Pattern Generation Logic.cpp
GenAI Mandelbrot Set Project/Code Structure (C++)/Inherited Classes/Visualization Class/: Color Assignment Logic.cpp  Render Output.cpp  Resolution Settings.cpp
GenAI Mandelbrot Set Project/Code Structure (C++)/Main Program/: Compute Fractal.cpp  Generate Visual Output.cpp
GenAI Mandelbrot Set Project/Code Structure (C++)/Utilities/: Complex Number Operations.cpp
GenAI Mandelbrot Set Project/Concept/Generative AI Integration/: Creative Exploration (Novel Fractal Patterns).cpp  Predictive Capabilities (Machine Learning).cpp
GenAI Mandelbrot Set Project/Concept/Mathematical Basis/: Equation: z₍ₙ₊₁₎ = zₙ² + c.cpp
GenAI Mandelbrot Set Project/Concept/Mathematical Basis/Complex Plane/: Imaginary Axis (Vertical).cpp  Real Axis (Horizontal).cpp
GenAI Mandelbrot Set Project/Concept/Mathematical Basis/Iteration Logic/: Arbitrary Iteration Count.cpp  Divergence Threshold (Pre-defined Absolute Value).cpp  Initial z = 0.cpp
GenAI Mandelbrot Set Project/Development Notes/: Language: C++.h  Tools: Generative AI Framework.h
GenAI Mandelbrot Set Project/Output/Image File/: Format (e.g., PNG, BMP).cpp  Resolution (Customizable).cpp
GenAI Mandelbrot Set Project/Output/Visual Representation/: Blacked-Out Areas (Convergent).cpp  Colored Areas (Divergent, Rate-Based).cpp
